# easy_journal

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
src/: config.rs  error.rs  main.rs
src/commands/: auth.rs  init.rs  mod.rs  new.rs  serve.rs
src/journal/: entry.rs  filesystem.rs  git_integrations.rs  github.rs  gitlab.rs  google_tasks.rs  mod.rs  oauth.rs  parser.rs  reminders.rs  summary.rs  template.rs
