[package]
name = "easy_journal"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
thiserror = "2.0"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }
serde_json = "1.0"

# Google Tasks API and OAuth2
google-tasks1 = "5.0.5"
yup-oauth2 = "9.0"

# HTTP client (for GitHub and GitLab REST APIs)
reqwest = { version = "0.12", features = ["json"] }

# Environment variable management
dotenvy = "0.15"